# python_crypto

./: .gitignore  README.md  main.py  pyexe.py  pyproject.toml
app/: README.md  main.py  requirements.txt  rsa_encryption.py
app.app/Contents/: Info.plist
app.app/Contents/_CodeSignature/: CodeResources
app/images/: taligent.icns
cli/: index.py  rsa_encryption.py
